Painting on image editor with texture brush causes memory leaks in render module #34501

Closed
opened 2013-03-02 23:34:08 +01:00 by Antonis Ryakiotakis · 7 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10

- Blender version with error, and version that worked ---

54972 is buggy.

- Short description of error ---

Lots of memory leaks on exit after painting

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

paint on image editor on attached file, exit blender
%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10 - Blender version with error, and version that worked --- 54972 is buggy. - Short description of error --- Lots of memory leaks on exit after painting - Steps for others to reproduce the error (preferably based on attached .blend file) --- paint on image editor on attached file, exit blender %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%My svn was on 54929 here, and your file doesn't give memory errors.
Latest svn 54991 neither.%%%

%%%My svn was on 54929 here, and your file doesn't give memory errors. Latest svn 54991 neither.%%%
Author
Member

%%%Still happening here on 54992. I'll retest on windows too.%%%

%%%Still happening here on 54992. I'll retest on windows too.%%%
Member

%%%I had it once here today, but now I cannot redo... it has todo with the preview render.%%%

%%%I had it once here today, but now I cannot redo... it has todo with the preview render.%%%

%%%Ton, it constantly happens here and i'm looking into the fix.%%%

%%%Ton, it constantly happens here and i'm looking into the fix.%%%

%%%Fixed in svn rev55017. Thanks for the report, closing.%%%

%%%Fixed in svn rev55017. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34501
No description provided.