Fix #34501: Painting on image editor with texture brush causes memory leaks in render module

Issue was caused by svn rev54721 where donequeue wasn't fully handled
in cases rendering was canceled, which lead to some render results
unfreed.